267		Vassal titles held by the liege are merged automatically
268		Abstract away details of matching tags
269		Progressive blobification
270		Read war data from CK2 save.  Account for "At War" opinion modifier.
271		Allow configuration of progressive blobification
272		When absorbing vassals, destroy any agreements they had
273		Merge
274		Write relationships between countries into the EU3 file.
275		Thoroughly rework religion handling on the CK2 side so we have more information about relationships between religions.
		Account for "Heretic" and "Religious Differences" opinion modifiers.
276		Related religions (e.g. catholic/orthodox) are not heresies of each other.
277		Fix trait->stat mapping.
278		Starting agents from state stats for converted countries.
279		Read score and use it to determine prestige (note: EU3 seems to muck with this when the file is loaded).
280		Uniquify province core output to quiet down EU3 debug logs.
281		merge independent baronies with their de jure liege
282		Clean up logging a little
283		Each step of progressive blobbing only happens once
284		Vassals and lieges will always at least cross-guarantee each other
285		Comradebot's updates to east Africa
286		Update religion mappings
287		A little starting money
288		Owned provinces get a level one fort
289		Starting agents for ROTW countries
290		Fix for change 288
291		Cores for ROTW provinces
292		Natives
293		Trailing slash in CK2 and EU3 locations now acceptable
294		Avoid some potential crashes from CK2 installs that don't match the save version
295		Use the global heresy check to determine whether the province heresy flag should be set.
296		Make province output match EU3 save output more closely.
297		More output order matching.
298		Still assign a primary title, even if the save doesn't define one
299		Output the HRE Emperor
300		Rename CK2+ readme file
301		Log when government gets default conversion
302		EU3 vassals never have vassals