@@ -306,3 +306,4 @@ Revision	Log Message
 300		Rename CK2+ readme file
 301		Log when government gets default conversion
 302		EU3 vassals never have vassals
+303		Juniors in a PU never have vassals
